// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestsResults overview snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1xkyebe"
  >
    <div
      class="css-jxxswp"
      id=""
    >
      <div
        class="css-xhp9da"
      />
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <div
          class="css-1d6wxci"
        >
          <table
            class="css-11y77l0"
            role="table"
          >
            <thead
              class="css-14kw1rx"
            >
              <tr
                class="css-vurnku"
                role="row"
              >
                <th
                  class="css-n59tc9"
                  colspan="1"
                  role="columnheader"
                  style="width: 20px;"
                >
                  <div
                    class="css-wwqljn"
                  >
                    <div
                      class="css-206mi5"
                    />
                  </div>
                </th>
                <th
                  class="css-n59tc9"
                  colspan="1"
                  role="columnheader"
                  style="width: 150px; cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="css-wwqljn"
                  >
                    <div
                      class="css-206mi5"
                    >
                      Status
                    </div>
                  </div>
                </th>
                <th
                  class="css-n59tc9"
                  colspan="1"
                  role="columnheader"
                  style="width: 150px; cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="css-wwqljn"
                  >
                    <div
                      class="css-206mi5"
                    >
                      Full name
                    </div>
                  </div>
                </th>
                <th
                  class="css-n59tc9"
                  colspan="1"
                  role="columnheader"
                  style="width: 150px; cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="css-wwqljn"
                  >
                    <div
                      class="css-206mi5"
                    >
                      Title
                    </div>
                  </div>
                </th>
                <th
                  class="css-n59tc9"
                  colspan="1"
                  role="columnheader"
                  style="width: 150px; cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="css-wwqljn"
                  >
                    <div
                      class="css-206mi5"
                    >
                      Time(ms)
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              class="css-tuhk50"
              role="rowgroup"
            >
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  colspan="5"
                >
                  <div
                    class="css-fz9au7"
                    style="cursor: pointer;"
                    title="Toggle Row Expanded"
                  >
                    <svg
                      aria-hidden="true"
                      class="octicon"
                      fill="currentColor"
                      height="16"
                      role="img"
                      style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M12.78 6.22a.75.75 0 010 1.06l-4.25 4.25a.75.75 0 01-1.06 0L3.22 7.28a.75.75 0 011.06-1.06L8 9.94l3.72-3.72a.75.75 0 011.06 0z"
                        fill-rule="evenodd"
                      />
                    </svg>
                     
                    <span
                      class="css-15vncxw-Cell"
                    >
                      Table.test.ts(12 tests)
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <span
                    class="css-x0l7ch-Tag"
                  >
                    <span
                      class="css-vurnku"
                    >
                      <div>
                        passed
                      </div>
                    </span>
                  </span>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div>
                    Table
                  </div>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="css-1e61pe6-Cell"
                  >
                    overview
                  </div>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="css-1n5mntj-Cell"
                  >
                    196
                  </div>
                </td>
              </tr>
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <span
                    class="css-x0l7ch-Tag"
                  >
                    <span
                      class="css-vurnku"
                    >
                      <div>
                        passed
                      </div>
                    </span>
                  </span>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div>
                    Table
                  </div>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="css-1e61pe6-Cell"
                  >
                    noHeader
                  </div>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="css-1n5mntj-Cell"
                  >
                    91
                  </div>
                </td>
              </tr>
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <span
                    class="css-1yajf8z-Tag"
                  >
                    <span
                      class="css-vurnku"
                    >
                      <div
                        class="css-1muvwk-Cell"
                        style="cursor: pointer;"
                        title="Toggle Row Expanded"
                      >
                        <div>
                          failed
                        </div>
                        <div>
                          <svg
                            aria-hidden="true"
                            class="octicon"
                            fill="currentColor"
                            height="24"
                            role="img"
                            style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                            viewBox="0 0 24 24"
                            width="24"
                          >
                            <path
                              d="M15.146 12.354l-5.792 5.792a.5.5 0 01-.854-.353V6.207a.5.5 0 01.854-.353l5.792 5.792a.5.5 0 010 .708z"
                            />
                          </svg>
                        </div>
                      </div>
                    </span>
                  </span>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div>
                    Table
                  </div>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="css-1e61pe6-Cell"
                  >
                    editing
                  </div>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="css-1n5mntj-Cell"
                  >
                    33
                  </div>
                </td>
              </tr>
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <span
                    class="css-1tckil5-Tag"
                  >
                    <span
                      class="css-vurnku"
                    >
                      <div>
                        disabled
                      </div>
                    </span>
                  </span>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div>
                    Table
                  </div>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="css-1e61pe6-Cell"
                  >
                    disable
                  </div>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="css-1n5mntj-Cell"
                  >
                    33
                  </div>
                </td>
              </tr>
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <span
                    class="css-r6mg6j-Tag"
                  >
                    <span
                      class="css-vurnku"
                    >
                      <div>
                        pending
                      </div>
                    </span>
                  </span>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div>
                    Table
                  </div>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="css-1e61pe6-Cell"
                  >
                    pending
                  </div>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="css-1n5mntj-Cell"
                  >
                    33
                  </div>
                </td>
              </tr>
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <span
                    class="css-1rd25ws-Tag"
                  >
                    <span
                      class="css-vurnku"
                    >
                      <div>
                        skipped
                      </div>
                    </span>
                  </span>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div>
                    Table
                  </div>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="css-1e61pe6-Cell"
                  >
                    skipped
                  </div>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="css-1n5mntj-Cell"
                  >
                    33
                  </div>
                </td>
              </tr>
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <span
                    class="css-183uinh-Tag"
                  >
                    <span
                      class="css-vurnku"
                    >
                      <div>
                        todo
                      </div>
                    </span>
                  </span>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div>
                    Table
                  </div>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="css-1e61pe6-Cell"
                  >
                    todo
                  </div>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="css-1n5mntj-Cell"
                  >
                    33
                  </div>
                </td>
              </tr>
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <span
                    class="css-x0l7ch-Tag"
                  >
                    <span
                      class="css-vurnku"
                    >
                      <div>
                        passed
                      </div>
                    </span>
                  </span>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div>
                    Table
                  </div>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="css-1e61pe6-Cell"
                  >
                    rowSelect
                  </div>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="css-1n5mntj-Cell"
                  >
                    144
                  </div>
                </td>
              </tr>
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <span
                    class="css-x0l7ch-Tag"
                  >
                    <span
                      class="css-vurnku"
                    >
                      <div>
                        passed
                      </div>
                    </span>
                  </span>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div>
                    Table
                  </div>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="css-1e61pe6-Cell"
                  >
                    pagination
                  </div>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="css-1n5mntj-Cell"
                  >
                    169
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
          <div
            class="css-43hdi9"
          >
            <div
              class="css-v7kut1"
            >
              total 12 tests
            </div>
            <div
              class="css-f5h6sg"
            >
              <div
                class="css-wzqkm9"
              >
                <div
                  class="css-1c1rsqy"
                >
                  <button
                    class="css-97huhz"
                    disabled=""
                  >
                    &lt;&lt;
                  </button>
                </div>
                <div
                  class="css-1c1rsqy"
                >
                  <button
                    class="css-97huhz"
                    disabled=""
                  >
                    &lt;
                  </button>
                </div>
                <div
                  class="css-1c1rsqy"
                >
                  <button
                    class="css-97huhz"
                  >
                    &gt;
                  </button>
                </div>
                <div
                  class="css-1c1rsqy"
                >
                  <button
                    class="css-97huhz"
                  >
                    &gt;&gt;
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TestsResults pagination snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1xkyebe"
  >
    <div
      class="css-jxxswp"
      id=""
    >
      <div
        class="css-xhp9da"
      />
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <div
          class="css-1d6wxci"
        >
          <table
            class="css-11y77l0"
            role="table"
          >
            <thead
              class="css-14kw1rx"
            >
              <tr
                class="css-vurnku"
                role="row"
              >
                <th
                  class="css-n59tc9"
                  colspan="1"
                  role="columnheader"
                  style="width: 20px;"
                >
                  <div
                    class="css-wwqljn"
                  >
                    <div
                      class="css-206mi5"
                    />
                  </div>
                </th>
                <th
                  class="css-n59tc9"
                  colspan="1"
                  role="columnheader"
                  style="width: 150px; cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="css-wwqljn"
                  >
                    <div
                      class="css-206mi5"
                    >
                      Status
                    </div>
                  </div>
                </th>
                <th
                  class="css-n59tc9"
                  colspan="1"
                  role="columnheader"
                  style="width: 150px; cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="css-wwqljn"
                  >
                    <div
                      class="css-206mi5"
                    >
                      Full name
                    </div>
                  </div>
                </th>
                <th
                  class="css-n59tc9"
                  colspan="1"
                  role="columnheader"
                  style="width: 150px; cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="css-wwqljn"
                  >
                    <div
                      class="css-206mi5"
                    >
                      Title
                    </div>
                  </div>
                </th>
                <th
                  class="css-n59tc9"
                  colspan="1"
                  role="columnheader"
                  style="width: 150px; cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="css-wwqljn"
                  >
                    <div
                      class="css-206mi5"
                    >
                      Time(ms)
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              class="css-tuhk50"
              role="rowgroup"
            >
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  colspan="5"
                >
                  <div
                    class="css-fz9au7"
                    style="cursor: pointer;"
                    title="Toggle Row Expanded"
                  >
                    <svg
                      aria-hidden="true"
                      class="octicon"
                      fill="currentColor"
                      height="16"
                      role="img"
                      style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M12.78 6.22a.75.75 0 010 1.06l-4.25 4.25a.75.75 0 01-1.06 0L3.22 7.28a.75.75 0 011.06-1.06L8 9.94l3.72-3.72a.75.75 0 011.06 0z"
                        fill-rule="evenodd"
                      />
                    </svg>
                     
                    <span
                      class="css-15vncxw-Cell"
                    >
                      Table.test.ts(12 tests)
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <span
                    class="css-x0l7ch-Tag"
                  >
                    <span
                      class="css-vurnku"
                    >
                      <div>
                        passed
                      </div>
                    </span>
                  </span>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div>
                    Table
                  </div>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="css-1e61pe6-Cell"
                  >
                    overview
                  </div>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="css-1n5mntj-Cell"
                  >
                    196
                  </div>
                </td>
              </tr>
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <span
                    class="css-x0l7ch-Tag"
                  >
                    <span
                      class="css-vurnku"
                    >
                      <div>
                        passed
                      </div>
                    </span>
                  </span>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div>
                    Table
                  </div>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="css-1e61pe6-Cell"
                  >
                    noHeader
                  </div>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="css-1n5mntj-Cell"
                  >
                    91
                  </div>
                </td>
              </tr>
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <span
                    class="css-1yajf8z-Tag"
                  >
                    <span
                      class="css-vurnku"
                    >
                      <div
                        class="css-1muvwk-Cell"
                        style="cursor: pointer;"
                        title="Toggle Row Expanded"
                      >
                        <div>
                          failed
                        </div>
                        <div>
                          <svg
                            aria-hidden="true"
                            class="octicon"
                            fill="currentColor"
                            height="24"
                            role="img"
                            style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                            viewBox="0 0 24 24"
                            width="24"
                          >
                            <path
                              d="M15.146 12.354l-5.792 5.792a.5.5 0 01-.854-.353V6.207a.5.5 0 01.854-.353l5.792 5.792a.5.5 0 010 .708z"
                            />
                          </svg>
                        </div>
                      </div>
                    </span>
                  </span>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div>
                    Table
                  </div>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="css-1e61pe6-Cell"
                  >
                    editing
                  </div>
                </td>
                <td
                  class="css-1yjhfhu"
                  role="cell"
                  style="width: 150px;"
                >
                  <div
                    class="css-1n5mntj-Cell"
                  >
                    33
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
          <div
            class="css-43hdi9"
          >
            <div
              class="css-v7kut1"
            >
              Total: 12 records
            </div>
            <div
              class="css-f5h6sg"
            >
              <div
                class="css-wzqkm9"
              >
                <div
                  class="css-1c1rsqy"
                >
                  <button
                    class="css-97huhz"
                    disabled=""
                  >
                    &lt;&lt;
                  </button>
                </div>
                <div
                  class="css-1c1rsqy"
                >
                  <button
                    class="css-97huhz"
                    disabled=""
                  >
                    &lt;
                  </button>
                </div>
                <div
                  class="css-1c1rsqy"
                >
                  <button
                    class="css-97huhz"
                  >
                    &gt;
                  </button>
                </div>
                <div
                  class="css-1c1rsqy"
                >
                  <button
                    class="css-97huhz"
                  >
                    &gt;&gt;
                  </button>
                </div>
              </div>
              <div
                class="css-1f9rp2t"
              >
                Page 1 of 4
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
